# fub-sandbox

./: .env.example  .gitignore  CLAUDE.md  README.md  fub.py  package-lock.json
backend/: miroflow_mcp_server.py  pyproject.toml  requirements.txt  run.py  start_flask.py
backend/app/: __init__.py  config.py
backend/app/api/: __init__.py  analysis.py  config.py  graph.py  report.py  research.py  simulation.py
backend/app/config/: event_rules.json
backend/app/models/: project.py
backend/app/services/: __init__.py  agent_enricher.py  agent_profile_generator.py  agent_sampler.py  agentsociety_opinion_block.py  agentsociety_output_writer.py  convergence_detector.py  custom_agent_parser.py  data_exporter.py  deep_research_service.py  document_context_engine.py  entity_reader.py  event_rule_engine.py  firecrawl_service.py  interview_service.py  jina_service.py  literature_service.py  miroflow_service.py  ontology_generator.py  opinion_agent.py  opinion_block.py  persona_cache.py  post_sim_analytics.py  prompt_reframer.py  replay_storage.py  serper_service.py  simulation_config_generator.py  simulation_ipc.py  simulation_manager.py  simulation_runner.py  topic_extractor.py
backend/app/skills/: __init__.py
backend/app/skills/fub_literature/: SKILL.md
backend/app/skills/fub_opinion_capture/: SKILL.md
backend/app/storage/: __init__.py  kglite_storage.py  ladybug_storage.py  neo4j_storage.py
backend/app/utils/: entity_resolver.py  llm_client.py  token_counter.py
backend/scripts/: analyze_tokens.py  run_simulation_as.py
frontend/: package.json
(+33 files in other folders)
